<resources>
    <string name="app_name">ParcialJuego</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_temporizador">00:00:00</string>
    <string name="msg_puntaje">puntaje: 0</string>
    <string name="msg_temporizador_titulo">TEMPORIZADOR</string>
    <string name="btn_red">rojo</string>
    <string name="btn_black">negro</string>
    <string name="btn_blue">azul</string>
    <string name="msg_yellow">amarillo</string>
    <string name="msg_green">verde</string>
    <string name="msg_orange">naranja</string>
    <string name="msg_puntaje_final">0</string>
    <string name="msg_puntaje_titulof">Puntaje:</string>
    <string name="msg_titulo">Juego de Colores!</string>
    <string name="msg_regla">Ver reglas</string>
    <string name="msg_inicio">Iniciar sesion</string>
</resources>