<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment"
    android:background="@color/cardview_shadow_start_color">


    <TextView
        android:id="@+id/txtTituloJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_titulo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp" />

    <!-- Imagen decorativa -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/msg_titulo"
        app:layout_constraintTop_toBottomOf="@id/txtTituloJuego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/transparent" />

    <Button
        android:id="@+id/btnMostrarReglas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_regla"
        android:backgroundTint="#FF9800"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnIniciarJuego"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para iniciar el juego -->
    <Button
        android:id="@+id/btnIniciarJuego"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_inicio"
        android:backgroundTint="#4CAF50"
        android:textColor="@android:color/white"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
