<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">


    <TextView
        android:id="@+id/txt_temporizador_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_temporizador_titulo"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_temporizador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_temporizador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_temporizador"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_puntaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cntn_color"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txt_puntaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_temporizador" />


    <TextView
        android:id="@+id/txt_puntaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_puntaje"
        app:layout_constraintBottom_toTopOf="@+id/grid_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="385dp"/>

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:columnCount="3"
        android:rowCount="2"
        android:padding="0dp"
        android:layout_marginTop="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_red"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/red2"/>

        <Button
            android:id="@+id/btn_black"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btn_blue"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"/>

        <Button
            android:id="@+id/btn_yellow"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/yellow"/>

        <Button
            android:id="@+id/btn_green"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/btn_orange"
            android:layout_margin="5dp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/orange"/>

    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>